Navigation in der Web-Anwendung "übersichtlicher". Links zu einer Dokumentations und Download-Seite eingefügt.
git-svn-id: svn://localhost/twospot_svn/trunk@622 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/Portal/war/index.html
+++ b/Portal/war/index.html
@@ -1,11 +1,18 @@
 <html>
 
 <head>
-	<title>Hello World</title>
+<title>Twospot</title>
 </head>
 
 <body>
-	<h1>Hello World</h1>
+<h1>Twospot</h1>
+
+<p>Navigation</p>
+<ul>
+     <li><a href="/start.htm">Twospot portal</a></li>
+     <li><a href="/docs/documentation.html">Tutorials and documentation</a></li>
+</ul>
+
 </body>
 
 </html>
