Portal: Link auf Dokumentation richtiggestellt.
git-svn-id: svn://localhost/twospot_svn/trunk@684 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/Portal/portal/index.html
+++ b/Portal/portal/index.html
@@ -10,7 +10,7 @@
 <p>Navigation</p>
 <ul>
      <li><a href="/start.htm">Twospot portal</a></li>
-     <li><a href="/docs/documentation.html">Tutorials and documentation</a></li>
+     <li><a href="/docs/documentation.jsp">Tutorials and documentation</a></li>
 </ul>
 
 </body>
