Portal-Anwendung mit Stylesheets
git-svn-id: svn://localhost/twospot_svn/trunk@767 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/Portal/portal/index.html
+++ b/Portal/portal/index.html
@@ -1,17 +1,23 @@
 <html>
 
 <head>
-<title>Twospot</title>
+<title>TwoSpot</title>
+
+<link href="./etc/twospot.css" type="text/css" rel="stylesheet" />
+
 </head>
 
 <body>
-<h1>Twospot</h1>
-
-<p>Navigation</p>
-<ul>
-     <li><a href="/start.htm">Twospot portal</a></li>
-     <li><a href="/docs/documentation.jsp">Tutorials and documentation</a></li>
-</ul>
+<div id="header">
+	<h1>Twospot</h1>
+</div>
+<div id="page">
+    <h2>Navigation</h2>
+    <ul>
+         <li><a href="/start.htm">Twospot portal</a></li>
+         <li><a href="/docs/documentation.jsp">Tutorials and documentation</a></li>
+    </ul>
+</div>
 
 </body>
 
